# Neural-Network

./: .gitignore  pyproject.toml
app/: data_processor.py  main.py  model.py  telegram_bot.py  train.py
